--- a/dev-plugins/bootstrapless/opac/general.less
+++ b/dev-plugins/bootstrapless/opac/general.less
@@ -7,3 +7,11 @@
     max-height: 40px;
     max-width: 140px;
 }
+
+legend {
+  /*  font-size: 16.5px; */
+}
+
+.brand_less_padding{
+	padding: 10px 27px 10px !important;
+}
