--- a/intranet/htdocs/intranet-tmpl/herramientas/importacion/esquemas_importacion.tmpl
+++ b/intranet/htdocs/intranet-tmpl/herramientas/importacion/esquemas_importacion.tmpl
@@ -13,7 +13,7 @@
 	}
 
     $(document).ready(function() {
-    	showEsquemaImportacion();
+    	showEsquemaImportacion([% id_esquema %]);
     });
 </script>
 
