Botones de esquema para el hinchabolas del Mono

--- a/intranet/htdocs/intranet-tmpl/herramientas/importacion/lista_registros_importacion.tmpl
+++ b/intranet/htdocs/intranet-tmpl/herramientas/importacion/lista_registros_importacion.tmpl
@@ -24,7 +24,7 @@ function cambiarFiltro (filtro){
                                                                 url => "[% url_prefix %]/herramientas/importacion/esquemas_importacion.pl",
                                                                 icon => "icon-white  icon-list-alt",
                                                                 params => ["token=[% token %]","id_esquema=[% id_esquema %]",],
-                                                                title   => " [% 'Esquemas' | i18n %]",
+                                                                title   => " [% 'Esquema' | i18n %]",
                                     ) ;
         [% END %]
 
