--- a/intranet/htdocs/intranet-tmpl/admin/logos_ajax_ui.tmpl
+++ b/intranet/htdocs/intranet-tmpl/admin/logos_ajax_ui.tmpl
@@ -25,8 +25,8 @@
                     <tbody>
                         <tr>
                             <td class="logoImage">
-                              <a class="fancy_link" href="http://[% SERVER_ADDRESS %][% opac_htdocs %]/[% user_theme %]/imagenes/logo_ui_opac_menu.png">
-                                <img border="0" src="http://[% SERVER_ADDRESS %][% opac_htdocs %]/[% user_theme %]/imagenes/logo_ui_opac_menu.png" alt="logo_ui_opac_menu.png" >
+                              <a class="fancy_link" href="http://[% SERVER_ADDRESS_OPAC %][% opac_htdocs %]/[% opac_theme %]/imagenes/logo_ui_opac_menu.png">
+                                <img border="0" src="http://[% SERVER_ADDRESS_OPAC %][% opac_htdocs %]/[% opac_theme %]/imagenes/logo_ui_opac_menu.png" alt="logo_ui_opac_menu.png" >
                               </a>
                             </td>
                             <td>
@@ -36,9 +36,9 @@
                         </tr>
                         [% FOREACH logo IN logos %]
                             <tr>
-                                <td class="userImage">
-                                    <a class="fancy_link" href="http://[% SERVER_ADDRESS %][% opac_htdocs %]/[% user_theme %]/imagenes/[% logo.getImagenPath %]">
-                                          <img border="0" src="http://[% SERVER_ADDRESS %][% opac_htdocs %]/[% user_theme %]/imagenes/[% logo.getImagenPath %]" alt="[% logo.getNombre %]" >
+                                <td class="logoImage">
+                                    <a class="fancy_link" href="http://[% SERVER_ADDRESS_OPAC %][% opac_htdocs %]/[% opac_theme %]/imagenes/[% logo.getImagenPath %]">
+                                          <img border="0" src="http://[% SERVER_ADDRESS_OPAC %][% opac_htdocs %]/[% opac_theme %]/imagenes/[% logo.getImagenPath %]" alt="[% logo.getNombre %]" >
 				                    </a>
                                 </td>
                                 <td>
