--- a/intranet/htdocs/intranet-tmpl/admin/global/novedades_intra_ajax.tmpl
+++ b/intranet/htdocs/intranet-tmpl/admin/global/novedades_intra_ajax.tmpl
@@ -75,11 +75,12 @@
 </fieldset>
 <div class="form-actions">
 [% PERL %]
-            print C4::AR::Filtros::to_Button(   text    => "[% 'Agregar novedad' | i18n %]",
-                    boton   => "boton_buscar",
+            print C4::AR::Filtros::action_link_button(   
+                    text    => "[% 'Agregar novedad' | i18n %]",
+                    button   => "btn btn-primary",
                     url=>"[% url_prefix %]/admin/global/agregar_novedad_intra.pl?token=[% token %]",
-                    width => "auto",
-                    title   => "[% 'Agregar novedad' | i18n %]",
+                    icon => "icon-white icon-plus",
+                    title   => " [% 'Agregar novedad' | i18n %]",
                     ) ;
 [% END %]
 </div>
