--- a/intranet/htdocs/intranet-tmpl/estantes/subEstante.tmpl
+++ b/intranet/htdocs/intranet-tmpl/estantes/subEstante.tmpl
@@ -141,7 +141,7 @@
                                                               print C4::AR::Filtros::action_button(
                                                                                                     button   => "btn btn-success",
                                                                                                     title   => "[% 'Agregar contenido' | i18n %]",
-                                                                                                    action => "agregarContenido([% estante.getId %],[% estante.getPadre %]);",
+                                                                                                    action => "agregarContenido([% estante.id %],[% estante.padre %]);",
                                                                         ) ;
                                     [% END %]
                               </div>
