fix en Filtros:133:link_to

--- a/intranet/htdocs/intranet-tmpl/estantes/estante.tmpl
+++ b/intranet/htdocs/intranet-tmpl/estantes/estante.tmpl
@@ -27,9 +27,10 @@
               [% PERL %]
                                         print C4::AR::Filtros::action_button(   
                                                                     
-                                                                            button   => "btn btn-success",
+                                                                            button   => "btn btn-primary",
                                                                             action   => 'agregarEstante();',
-                                                                            title    => "[% 'Agregar Estante' | i18n %]",
+                                                                            icon     => 'icon-white icon-ok',
+                                                                            title    => " [% 'Agregar Estante' | i18n %]",
                                                                       
                                                 ) ;
               [% END %]
@@ -56,9 +57,10 @@
                                           
               [% PERL %]
                                         print C4::AR::Filtros::action_button(  
-                                                                            button   => "btn btn-success",
+                                                                            button   => "btn btn-primary",
                                                                             action => 'agregarSubEstante();',
-                                                                            title   => "[% 'Agregar Subestante' | i18n %]",
+                                                                             icon     => 'icon-white icon-ok',
+                                                                            title   => " [% 'Agregar Subestante' | i18n %]",
                                                                           
                                                 ) ;
               [% END %]
