cambios en guardar preferencias

--- a/intranet/htdocs/intranet-tmpl/admin/agregar_novedad.tmpl
+++ b/intranet/htdocs/intranet-tmpl/admin/agregar_novedad.tmpl
@@ -244,7 +244,7 @@
                                                       ) ;
 
                     [% END %]
-                    <button class="btn btn-primary" type="submit"><i class="icon-white icon-plus"></i>[% 'Agregar' | i18n %]</button>
+                    <button class="btn btn-primary" type="submit"><i class="icon-white icon-ok"></i> [% 'Aceptar' | i18n %]</button>
                     
                 [% END %]
                 </div>
