--- a/intranet/htdocs/intranet-tmpl/admin/global/agregar_novedad_intra.tmpl
+++ b/intranet/htdocs/intranet-tmpl/admin/global/agregar_novedad_intra.tmpl
@@ -107,8 +107,8 @@
                                   print C4::AR::Filtros::action_button( 
                                                                     button      => "btn btn-primary",
                                                                     action      => "agregar()", 
-                                                                    icon        => "icon-white icon-plus",
-                                                                    title       => " [% 'Agregar' | i18n %]",
+                                                                    icon        => "icon-white icon-ok",
+                                                                    title       => " [% 'Aceptar' | i18n %]",
                                                               ) ;
 
 
