--- a/intranet/htdocs/intranet-tmpl/admin/global/catalogoResultConfig.tmpl
+++ b/intranet/htdocs/intranet-tmpl/admin/global/catalogoResultConfig.tmpl
@@ -31,7 +31,10 @@
 </script>
 
 
-<form id="formPreferenciasCatalogo" onclick="return false;" class="form-horizontal" action="[% url_prefix %]/admin/global/catalogo_config.pl?token=[% token %]" method="post">
+<form id="formPreferenciasCatalogo" class="form-horizontal" 
+      action="[% url_prefix %]/admin/global/catalogo_config.pl?token=[% token %]" method="post"
+      onsubmit="buttonPost('preferencias-submit');"
+      >
     <fieldset class="resultados_busqueda">
     <legend>[% "Administraci&oacute;n de preferencias de Cat&oacute;logo" | i18n %]</legend>
 
@@ -62,12 +65,20 @@
             [% END %]
             
     <input type="hidden" id="editando" name="editando" value="1">
+                    [% IF mensaje %]
+                            <div class="alert [% mensaje_class %]">
+                                    <strong>[% 'Informaci&oacute;n' | i18n %]</strong> [% mensaje %]
+                            </div>
+                    [% END %]
+    
     <div class="form-actions">
         [% PERL %]
-                    print C4::AR::Filtros::to_Button(   text    => "[% 'Guardar Cambios' | i18n %]",
-                                                        type    => "submit",
-                                                        boton   => "boton_agregar",
-                                                        onclick => "guardarPreferencias();"
+                    print C4::AR::Filtros::action_button(   
+                                                        title   => "[% 'Guardar' | i18n %]",
+                                                        button  => "btn btn-primary",
+                                                        id      => "preferencias-submit",
+                                                        action  => "guardarPreferencias();",
+                                                        icon    => "icon-white icon-ok",
                             ) ;
         [% END %]
     </div>
