--- a/opac/htdocs/opac-tmpl/opac-MARCdetail.tmpl
+++ b/opac/htdocs/opac-tmpl/opac-MARCdetail.tmpl
@@ -5,7 +5,7 @@
 
   [% PERL %]
       print C4::AR::Filtros::tabbedPane( 
-                                   content   => [ {id => 'detalle', text=> "[% 'Detalls' | i18n %]" },
+                                   content   => [ {id => 'detalle', text=> "[% 'Detalle' | i18n %]" },
                                                   {id => 'marc', text => "[% 'MARC' | i18n %]"},
                                                 ],
                                    content_id=> ['detalle_marc_tabs'],
