--- a/dev-plugins/bootstrapless/opac/general.less
+++ b/dev-plugins/bootstrapless/opac/general.less
@@ -15,3 +15,8 @@ legend {
 .brand_less_padding{
 	padding: 10px 27px 10px !important;
 }
+
+.bigInput {
+    height: 32px !important;
+    font-size: 23px !important;
+}
