--- a/intranet/htdocs/intranet-tmpl/busquedas/busquedaResult.tmpl
+++ b/intranet/htdocs/intranet-tmpl/busquedas/busquedaResult.tmpl
@@ -181,10 +181,10 @@
             
                     <td>
                         [% FOREACH disponibilidad %]
-                            <b>[% tipoPrestamo %]</b> [% cantTotal %]<br>
-                               [% nodisponibles %]
-                               [% reservados %]
-                               [% prestados %]
+                            <b>[% tipoPrestamo %]</b> [% cantTotal %]<br />
+                               [% IF nodisponibles %][% nodisponibles %]<br />[% END %]
+                               [% IF reservados %][% reservados %]<br />[% END %]
+                               [% IF reservados %][% prestados %]<br />[% END %]
                         [% END %]
                     </td>   
                     [% IF signatura_filter %]
