--- a/intranet/htdocs/intranet-tmpl/admin/referencias/detalle_referencias.tmpl
+++ b/intranet/htdocs/intranet-tmpl/admin/referencias/detalle_referencias.tmpl
@@ -31,7 +31,7 @@
                                 
                                   print C4::AR::Filtros::action_button( 
                                               button    => "btn btn-danger click",
-                                              action    => 'eliminarReferencia("[% tabla_related %]","[% referer_involved.getPkValue %]")', 
+                                              action    => 'eliminarReferencia("[% tabla_related %]","[% referer_involved.toString %]")', 
                                               icon      => "icon-white icon-remove",
                                               title     => "[% 'Eliminar' | i18n %]",
                                       ) ;
@@ -59,14 +59,14 @@
 <fieldset>
     <legend>[% "Relaciones " | i18n %]: [% tabla %]</legend>
         <div class="datos_tabla_div" id="datos_tabla_div">
+          [% IF involved_count > 0 %]
             <table id="tablaResult_relacionados" class="table table-striped">
                 <thead>
-                    <tr class="titulo_tabla_resultado">
+                    <tr class="titulo_tabla_resultado" id="related_header_title_temp">
                             <th> [% "Tablas relacionadas " | i18n %]</th>
                     </tr>
                 </thead>
                 <tbody>
-                        [% IF involved_count > 0 %]
                           [% write = 0 %]
                             [% FOREACH data IN involved %]
                                 [% IF data.cantidad > 0%]
@@ -78,12 +78,15 @@
                             [% END %]
                             [% IF !write %]
                                   <div class="alert alert-info">[% "No existe ninguna tabla que haga uso de esta tabla de referencia" | i18n %]</div>
+                                  <script>
+                                    $('#related_header_title_temp').hide();
+                                  </script>
                             [% END %]
-                        [% ELSE %]
-                              <tr><td>[% "No existe ninguna tabla que haga uso de esta tabla de referencia" | i18n %]</td></tr>
-                        [% END %]
                 </tbody>
             </table>
+          [% ELSE %]
+                <div class="alert alert-info">[% "No existe ninguna tabla que haga uso de esta tabla de referencia" | i18n %]</div>
+          [% END %]
         </div>
 </fieldset>
 </br>
