minor fix en busquedaResult.inc - width: 60px para la primer TD de la imagen del tipo de doc

--- a/intranet/htdocs/intranet-tmpl/busquedas/busquedaResult.tmpl
+++ b/intranet/htdocs/intranet-tmpl/busquedas/busquedaResult.tmpl
@@ -61,7 +61,7 @@
 
             [% FOREACH SEARCH_RESULTS %]
                 <tr>
-                     <td>
+                     <td style="width: 60px;">
                          [% IF portadas_grupo_cant > 0 %]
                                  [% FOREACH portada IN portadas_grupo %]
                                      [% IF loop.count < 4 %]
