--- a/intranet/htdocs/intranet-tmpl/includes/partials/modificar_value_input.tmpl
+++ b/intranet/htdocs/intranet-tmpl/includes/partials/modificar_value_input.tmpl
@@ -1,6 +1,6 @@
 <div class="form-horizontal">
     <fieldset>
-	     <legend>[% "Modificar Preferencia:" | i18n %]</legend>
+	     <legend>[% "Modificar c&oacute;digo de inventario:" | i18n %]</legend>
 	      <div class="control-group">
 	                 <h4>[% 'Formato de Inventario para ' | i18n %] [% tipo_doc %]</h4>
                      <div class="controls">
@@ -16,7 +16,7 @@
 	     </div>
 	     
 	      <div class="form-actions">
-	         <button class="btn btn-primary" onclick="[% function %]" id="unique_modify_button">[% 'Actualizar formato' | i18n %]</button>
+	         <button class="btn btn-primary" onclick="[% function %]" id="unique_modify_button"><i class="icon-white icon-ok"></i> [% 'Actualizar formato' | i18n %]</button>
 	      </div>
     </fieldset>
 </div>
