--- a/intranet/htdocs/intranet-tmpl/usuarios/reales/historialPrestamos.tmpl
+++ b/intranet/htdocs/intranet-tmpl/usuarios/reales/historialPrestamos.tmpl
@@ -75,7 +75,7 @@
                               [% END %]
                           </td>
                           <td>
-                              [% prestamo.tipo.getDescripcion %]
+                              [% prestamo.getTipo_prestamo %]
                           </td>
                           <td>
                               [% prestamo.renovaciones%]
