--- a/intranet/htdocs/intranet-tmpl/usuarios/reales/historialPrestamos.tmpl
+++ b/intranet/htdocs/intranet-tmpl/usuarios/reales/historialPrestamos.tmpl
@@ -75,7 +75,7 @@
                               [% END %]
                           </td>
                           <td>
-                              [% prestamo.getTipo_prestamo %]
+                              <span class="label">[% prestamo.getTipo_prestamo %]</span>
                           </td>
                           <td>
                               [% prestamo.renovaciones%]
